@@ -2,29 +2,28 @@
   <div class="modal-wrap">
     <div class="modal-body">
       <div (click)="$event.stopPropagation()" class="modal-body-content">
-        <form class="modal-content" style="max-width: 500px" [formGroup]="forgotPasswordForm"
+        <form class="modal-content" style="max-width: 600px" [formGroup]="forgotPasswordForm"
           (ngSubmit)="forgotPassword()" *ngIf="!sendSuccess; else successContent">
           <div class="modal-close">
             <span class="fas fa-times" [routerLink]="['', {outlets: {modal:null}}]"></span>
           </div>
           <h3 class="font-weight-bold">Reset password</h3>
           <p class="mt-3 mb-3">Enter the email address associated with your account.<br />
-            We'll email you a link to reset your password
+            We'll email you a link to reset your password.
           </p>
           <div class="ws-input mb-4">
             <input name="email" type="text" placeholder="Email" class="form-control form-control-sm nooutline"
               formControlName="email" />
           </div>
           <div class="row no-gutters">
-            <a href="javascript:void(0)" class="mt-3" style="color: #000; font-size: 1.1rem; font-weight: 400"
+            <a href="javascript:void(0)" class="mt-2" style="color: #000; font-size: 1.1rem; font-weight: 400"
               [routerLink]="['',{ outlets: { modal: 'login' } }]"><span class="fas fa-chevron-left mr-2"></span>Back to
               login</a>
-            <ws-loading-button [class]="'btn btn-md btn-main mb-2'" style="margin-left: auto"
+            <ws-loading-button [class]="'btn btn-md btn-second'" style="margin-left: auto"
               [loading]="loading.isRunning()">Send
               reset
               link</ws-loading-button>
           </div>
-
         </form>
       </div>
     </div>
@@ -33,16 +32,16 @@
 
 
 <ng-template #successContent>
-  <div class="modal-content">
+  <div class="modal-content" style="max-width: 500px">
     <!-- <div class="modal-close">
       <span class="fas fa-times" (click)="close(); "></span>
     </div> -->
     <h3 class="font-weight-bold">Reset password</h3>
-    <div class="text-center mt-4 mb-4">
+    <div class="text-center mt-5 mb-4">
       <span class="far fa-check-circle" style="font-size: 7rem; color:#68DC64"></span>
     </div>
 
-    <p class="text-center mb-3" style="font-size: .8rem">Email is sent.<br />
+    <p class="text-center mb-5">Email is sent.<br />
       Please check your email.
     </p>
     <a href="javascript:void(0)" style="color: #000; font-size: 1.1rem; font-weight: 400"
