@@ -1,0 +1,82 @@
+<div modal class="modal">
+  <div class="modal-wrap">
+    <div class="modal-body">
+      <div (click)="$event.stopPropagation()" class="modal-body-content">
+        <form class="modal-content" style="max-width: 500px" [formGroup]="resetPasswordForm"
+          (ngSubmit)="resetPassword()" *ngIf="user && !resetSuccess; else failContent">
+          <div class="modal-close">
+            <span class="fas fa-times" [routerLink]="['', {outlets: {modal:null}}]"></span>
+          </div>
+          <h3 class="font-weight-bold">Reset password</h3>
+          <p class="mt-3 mb-0">Enter a new password to your account.</p>
+          <div class="ws-input mb-2">
+            <input name="password" type="password" placeholder="New Password"
+              class="form-control form-control-sm nooutline" formControlName="password" />
+          </div>
+          <ul class="font-9 text-muted mb-2 list-unstyled pl-3 pr-3">
+            <li [class.text-success]="!password.errors?.minlength && !password.errors?.required" class="p-0">At
+              least
+              8
+              characters</li>
+            <li [class.text-success]="!password.errors?.Uppercase && !password.errors?.required" class="p-0">At
+              least
+              1
+              uppercase</li>
+            <li [class.text-success]="!password.errors?.Digit && !password.errors?.required" class="p-0">At least 1
+              digit</li>
+          </ul>
+          <div class="ws-input mb-4">
+            <input name="confirmPassword" type="password" placeholder="Confirm Password"
+              class="form-control form-control-sm nooutline" formControlName="confirmPassword" />
+          </div>
+          <div class="row no-gutters">
+            <a href="javascript:void(0)" class="mt-2" style="color: #000; font-size: 1.1rem; font-weight: 400"
+              [routerLink]="['',{ outlets: { modal: 'login' } }]"><span class="fas fa-chevron-left mr-2"></span>Back to
+              login</a>
+            <ws-loading-button [class]="'btn btn-md btn-second mb-2'" style="margin-left: auto"
+              [loading]="loading.isRunning()">Update</ws-loading-button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<ng-template #successContent>
+  <div class="modal-content" style="max-width: 500px">
+    <div class="modal-close">
+      <span class="fas fa-times" (click)="close(); "></span>
+    </div>
+    <h3 class="font-weight-bold">Reset password</h3>
+    <div class="text-center mt-5 mb-4">
+      <span class="far fa-check-circle" style="font-size: 7rem; color:#68DC64"></span>
+    </div>
+
+    <p class="text-center mb-5">Password is updated.<br />
+      Login now.
+    </p>
+    <a href="javascript:void(0)" style="color: #000; font-size: 1.1rem; font-weight: 400"
+      [routerLink]="['',{ outlets: { modal: 'login' } }]"><span class="fas fa-chevron-left mr-2"></span>Back to
+      login</a>
+  </div>
+</ng-template>
+
+
+<ng-template #failContent>
+  <ng-container *ngIf="!user && !resetSuccess; else successContent">
+    <div class="modal-content" style="max-width: 500px">
+      <div class="modal-close">
+        <span class="fas fa-times" [routerLink]="['', {outlets: {modal:null}}]"></span>
+      </div>
+      <h3 class="font-weight-bold">Reset Password</h3>
+      <div class="text-center mt-5 mb-4">
+        <span class="far fa-times-circle" style="font-size: 7rem; color:#ff0000"></span>
+      </div>
+      <p class="text-center mb-5" style="font-size: 1.2rem">Reset link is invalid!</p>
+      <a href="javascript:void(0)" style="color: #000; font-size: 1.1rem; font-weight: 400"
+        [routerLink]="['',{ outlets: { modal: 'login' } }]"><span class="fas fa-chevron-left mr-2"></span>Back to
+        login</a>
+    </div>
+  </ng-container>
+</ng-template>
