@@ -4,6 +4,11 @@
 
 - v1.0.1000                                 -
 ---------------------------------------------
+- 2020-04-12                                -
+---------------------------------------------
+.: WSM: Task: Forget Password (WSM-3)
+
+---------------------------------------------
 - 2020-04-11                                -
 ---------------------------------------------
 .: WSM: Task: Get template from existing code (WSM-14)
